Fix alignment on banners and nav

--- a/app/assets/sass/version-2/_components.scss
+++ b/app/assets/sass/version-2/_components.scss
@@ -44,15 +44,22 @@
     height: 3.125rem;
   }
 
-  .dfe-callout {
-    @include govuk-responsive-padding(9, "top");
-    @include govuk-responsive-padding(8, "bottom");
+  .dfe-banner {
+    @include govuk-responsive-padding(5, "top");
+    @include govuk-responsive-padding(5, "bottom");
     background-color: $accent;
 
+    .govuk-heading-l,
     .govuk-heading-xl,
     .govuk-body {
       color: govuk-colour("white");
     }
+
+    &.dfe-banner--l {
+      @include govuk-responsive-padding(9, "top");
+      @include govuk-responsive-padding(8, "bottom");
+    }
+
   }
 
   .dfe-card {
@@ -82,6 +89,7 @@
   }
 
   .dfe-side-nav {
+    margin-left: -12px;
 
     .dfe-side-nav__list {
       @include govuk-responsive-margin(6, "bottom");
